cover whitespace, fix today in picker

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -41,6 +41,7 @@
 
 #votingDapp div.section {
     padding: 20px;
+    padding-botton: 0;
     margin-bottom: 66px
 }
 
@@ -853,3 +854,7 @@ button[disabled]{
     color: #939BA1;
 }
 
+.schedule-calendar {
+    width: 100% !important;
+    max-width: 400px;
+}
